# betfunsports-mcp

./: .gitignore  Dockerfile  MARKETING.md  README.md  SKILL.md  _meta.json  bot.py  claw.json  clawhub.json  context.md  evaluation-of-forecast.md  how-to-bet.md  install.sh  marketing-research.md  overall.md  pool-distribution.md  priorities.md  pyproject.toml  skill.md  smithery.yaml  start.sh  task.md  test_bfs.py  test_bfs_v2.py  test_mcp.py  Серая зона: приоритизация стран для запуска без лицензии.md
bfs-mcp/: .env.example  .gitignore  README.md  SKILL.md  bot.py  cursor-mcp-config.json  pyproject.toml  skill.md
bfs-mcp/src/bfs_mcp/: bot.py  browser.py  server.py
docs/4.03/: Таблица Маркетинговое исследование: куда выводить.md
src/bfs_mcp/: __init__.py  bot.py  browser.py  notify.py  server.py  skill.md
