[project]
name = "bfs-mcp"
version = "0.2.0"
description = "MCP server + Telegram bot for betfunsports.com — headless browser bridge, no API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
bot = [
    "aiogram>=3.20.0",
    "openai>=1.0.0",
]

[project.scripts]
bfs-mcp = "bfs_mcp.server:main"
bfs-bot = "bfs_mcp.bot:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
